# gb.automation.smoketests.api.poc

./: .env.demoapp_ts_api  .gitignore  CODE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW.md  README.md  package-lock.json  package.json
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/: .env.example  README.md  RUN_API.bat  RUN_TESTS.bat  conftest.py  playwright.cmd  pyproject.toml  pytest.ini
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/docs/: ARCHITECTURE.md  QA_STRATEGY.md  SCREENPLAY_GUIDE.md
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/features/: README.md
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/features/api/: alive.feature  parse_date_token.feature  parse_dynamic_string_token.feature
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/features/step_definitions/: api_steps.py  util_steps.py  world.py
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/features/util-tests/: tokenDateParser.feature  tokenDynamicStringParser.feature
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/screenplay/abilities/: __init__.py  call_an_api.py  use_token_parsers.py
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/screenplay/actors/: __init__.py  actor.py
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/screenplay/questions/: __init__.py  response_body.py  response_status.py
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/src/: __init__.py  server.py
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/tests/: __init__.py  conftest.py
_API_TESTING_GHERKIN_/DEMOAPP004_PYTHON_PLAYWRIGHT/tooling/: run_bdd.py  summary_renderer.py
(+230 files in other folders)
